--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ h1 ,p{
 position: relative;
 top:100px;
 right: 20px;
-color: beige;
+color: lightgray;
 }
 
 .show{
@@ -77,6 +77,7 @@ element.style {
     display: flex;
    /* border: 2px solid black;*/
    background-color: black;
+   overflow-x: scroll;
  
   
 }
